resources/drupal-mysql-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - name: drupal-mysql-vol
          persistentVolumeClaim:
            claimName: drupal-mysql-pvc
      containers:
      - name: mysql
        image: mysql:5.7
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: drupal-mysql-vol
        ports:
        - containerPort: 3306
