resources/drupal-mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: drupal-mysql
  namespace: drupal-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3306
  selector:
    app: mysql
