resources/drupal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: drupal
  name: drupal
  namespace: drupal-dev
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
  selector:
    app: drupal
