resources/drupal-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: drupal
  name: drupal
  namespace: drupal-hmg
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: drupal
    weight: 100
  wildcardPolicy: None
